Prototipo Funcional Local, Todas las Funcionalidades
